--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "@turf/turf": "^7.0.0-alpha.113",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "i18next": "^25.7.2",
+        "i18next-browser-languagedetector": "^8.2.0",
         "lucide-react": "^0.323.0",
         "maplibre-gl": "^4.0.0",
         "next": "14.1.0",
         "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-i18next": "^16.5.0",
         "react-map-gl": "^7.1.7",
         "sonner": "^1.4.0",
         "swr": "^2.2.4",
